Closed
Bug 47853
Opened 25 years ago
Closed 25 years ago
Second send operation fails due to missing HELO
Categories
(MailNews Core :: Networking: SMTP, defect, P3)
MailNews Core
Networking: SMTP
Tracking
(Not tracked)
VERIFIED
FIXED
M18
People
(Reporter: BenB, Assigned: mscott)
Details
Attachments
(1 file)
|
14.31 KB,
patch
|
Details | Diff | Splinter Review |
I can usually send exactly one mail per session. Each following attempt fails
with an error: "[...] The mail server responded: MAIL FROM must be preceded by
HELO/EHLO command. Please verify that your email address is correct in your Mail
preferences and try again.". 100% reproducable for me.
| Assignee | ||
Comment 1•25 years ago
|
||
I think this is a dup of some other HELO/EHLO bugs I have. I think Jeff's whacky
smtp capabilities caching code really broke a lot of stuff like this. I'm
tempted to just turn it off since he's out on sabbatical and it really doesn't
work very well.
Another possibility is that someone in compose isn't forcing us to create a new
smtp protocol instance.
| Assignee | ||
Comment 2•25 years ago
|
||
Ben, I'm working on a patch that backs out all the smtp capability caching. But
I don't have a server to test against that requires that HELO/EHLO gets sent
first. If I post a patch can you test it against your mail server?
| Assignee | ||
Comment 3•25 years ago
|
||
| Assignee | ||
Comment 4•25 years ago
|
||
This patch fixes this problem for me. I see the EHLO going out every time we
send now.
| Assignee | ||
Comment 5•25 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•25 years ago
|
||
tnx
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•