Bug #47853, 47901, 47835, 47324, 47811 --> back out caching of smtp capabilities...this breaks the smtp protocol which requires an EHLO or HELO to always be issued. Fix case for HELO response. r=bienvenu